# trading-rl-env

./: .env.example  .gitignore  Dockerfile  Dockerfile.hud  README.md  docker-compose.yml  env.py  local_test.py  pyproject.toml  remote_tasks.json  remote_test.py  run.sh  supervisord.conf  tasks.json  test_full.py  test_task.py
backend/: __init__.py  app.py  client.py
config/: configSim.txt
environment/: README.md  __init__.py  pyproject.toml  server.py
grading/: __init__.py  graders.py  spec.py
server/: README.md  main.py  pyproject.toml  shared.py  tools.py
tasks/: QUANT_TASKS_RESEARCH.md  __init__.py  basic_tasks.py  quant_tasks.py  take_profit.py
tools/: __init__.py  market.py  orders.py  portfolio.py
